exec/nginx/parser/nginx_parser.go
// Code generated from Nginx.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // Nginx

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type NginxParser struct {
	*antlr.BaseParser
}

var nginxParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func nginxParserInit() {
	staticData := &nginxParserStaticData
	staticData.literalNames = []string{
		"", "';'", "'{'", "'}'", "'if'", "')'", "'('", "'\\.'", "'^'", "'location'",
		"'rewrite'", "'last'", "'break'", "'redirect'", "'permanent'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "LUA_HEADER",
		"Value", "STR_EXT", "LINE_COMMENT", "REGEXP_PREFIXED", "QUOTED_STRING",
		"SINGLE_QUOTED", "WS", "NEWLINE",
	}
	staticData.ruleNames = []string{
		"config", "statement", "genericStatement", "regexHeaderStatement", "luaBlock",
		"luaStatement", "block", "genericBlockHeader", "ifStatement", "ifBody",
		"regexp", "locationBlockHeader", "rewriteStatement",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// NginxParserInit initializes any static state used to implement NginxParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewNginxParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func NginxParserInit() {
	staticData := &nginxParserStaticData
	staticData.once.Do(nginxParserInit)
}

// NewNginxParser produces a new parser instance for the optional input antlr.TokenStream.
func NewNginxParser(input antlr.TokenStream) *NginxParser {
	NginxParserInit()
	this := new(NginxParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &nginxParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Nginx.g4"

	return this
}

// NginxParser tokens.
const (
	NginxParserEOF             = antlr.TokenEOF
	NginxParserT__0            = 1
	NginxParserT__1            = 2
	NginxParserT__2            = 3
	NginxParserT__3            = 4
	NginxParserT__4            = 5
	NginxParserT__5            = 6
	NginxParserT__6            = 7
	NginxParserT__7            = 8
	NginxParserT__8            = 9
	NginxParserT__9            = 10
	NginxParserT__10           = 11
	NginxParserT__11           = 12
	NginxParserT__12           = 13
	NginxParserT__13           = 14
	NginxParserLUA_HEADER      = 15
	NginxParserValue           = 16
	NginxParserSTR_EXT         = 17
	NginxParserLINE_COMMENT    = 18
	NginxParserREGEXP_PREFIXED = 19
	NginxParserQUOTED_STRING   = 20
	NginxParserSINGLE_QUOTED   = 21
	NginxParserWS              = 22
	NginxParserNEWLINE         = 23
)

// NginxParser rules.
const (
	NginxParserRULE_config               = 0
	NginxParserRULE_statement            = 1
	NginxParserRULE_genericStatement     = 2
	NginxParserRULE_regexHeaderStatement = 3
	NginxParserRULE_luaBlock             = 4
	NginxParserRULE_luaStatement         = 5
	NginxParserRULE_block                = 6
	NginxParserRULE_genericBlockHeader   = 7
	NginxParserRULE_ifStatement          = 8
	NginxParserRULE_ifBody               = 9
	NginxParserRULE_regexp               = 10
	NginxParserRULE_locationBlockHeader  = 11
	NginxParserRULE_rewriteStatement     = 12
)

// IConfigContext is an interface to support dynamic dispatch.
type IConfigContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConfigContext differentiates from other interfaces.
	IsConfigContext()
}

type ConfigContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConfigContext() *ConfigContext {
	var p = new(ConfigContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NginxParserRULE_config
	return p
}

func (*ConfigContext) IsConfigContext() {}

func NewConfigContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConfigContext {
	var p = new(ConfigContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NginxParserRULE_config

	return p
}

func (s *ConfigContext) GetParser() antlr.Parser { return s.parser }

func (s *ConfigContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ConfigContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ConfigContext) AllBlock() []IBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBlockContext); ok {
			len++
		}
	}

	tst := make([]IBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBlockContext); ok {
			tst[i] = t.(IBlockContext)
			i++
		}
	}

	return tst
}

func (s *ConfigContext) Block(i int) IBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ConfigContext) AllLuaBlock() []ILuaBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILuaBlockContext); ok {
			len++
		}
	}

	tst := make([]ILuaBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILuaBlockContext); ok {
			tst[i] = t.(ILuaBlockContext)
			i++
		}
	}

	return tst
}

func (s *ConfigContext) LuaBlock(i int) ILuaBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILuaBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILuaBlockContext)
}

func (s *ConfigContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConfigContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConfigContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NginxVisitor:
		return t.VisitConfig(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NginxParser) Config() (localctx IConfigContext) {
	this := p
	_ = this

	localctx = NewConfigContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, NginxParserRULE_config)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<NginxParserT__8)|(1<<NginxParserT__9)|(1<<NginxParserLUA_HEADER)|(1<<NginxParserValue)|(1<<NginxParserREGEXP_PREFIXED))) != 0) {
		p.SetState(29)
		p.GetErrorHandler().Sync(p)
		switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(26)
				p.Statement()
			}

		case 2:
			{
				p.SetState(27)
				p.Block()
			}

		case 3:
			{
				p.SetState(28)
				p.LuaBlock()
			}

		}

		p.SetState(31)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NginxParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NginxParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) RewriteStatement() IRewriteStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRewriteStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRewriteStatementContext)
}

func (s *StatementContext) GenericStatement() IGenericStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGenericStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGenericStatementContext)
}

func (s *StatementContext) RegexHeaderStatement() IRegexHeaderStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegexHeaderStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegexHeaderStatementContext)
}

func (s *StatementContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(NginxParserNEWLINE, 0)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NginxVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NginxParser) Statement() (localctx IStatementContext) {
	this := p
	_ = this

	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, NginxParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(36)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case NginxParserT__9:
		{
			p.SetState(33)
			p.RewriteStatement()
		}

	case NginxParserValue:
		{
			p.SetState(34)
			p.GenericStatement()
		}

	case NginxParserREGEXP_PREFIXED:
		{
			p.SetState(35)
			p.RegexHeaderStatement()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	{
		p.SetState(38)
		p.Match(NginxParserT__0)
	}
	p.SetState(40)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(39)
			p.Match(NginxParserNEWLINE)
		}

	}

	return localctx
}

// IGenericStatementContext is an interface to support dynamic dispatch.
type IGenericStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGenericStatementContext differentiates from other interfaces.
	IsGenericStatementContext()
}

type GenericStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGenericStatementContext() *GenericStatementContext {
	var p = new(GenericStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NginxParserRULE_genericStatement
	return p
}

func (*GenericStatementContext) IsGenericStatementContext() {}

func NewGenericStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GenericStatementContext {
	var p = new(GenericStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NginxParserRULE_genericStatement

	return p
}

func (s *GenericStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *GenericStatementContext) AllValue() []antlr.TerminalNode {
	return s.GetTokens(NginxParserValue)
}

func (s *GenericStatementContext) Value(i int) antlr.TerminalNode {
	return s.GetToken(NginxParserValue, i)
}

func (s *GenericStatementContext) AllRegexp() []IRegexpContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRegexpContext); ok {
			len++
		}
	}

	tst := make([]IRegexpContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRegexpContext); ok {
			tst[i] = t.(IRegexpContext)
			i++
		}
	}

	return tst
}

func (s *GenericStatementContext) Regexp(i int) IRegexpContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegexpContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegexpContext)
}

func (s *GenericStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GenericStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GenericStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NginxVisitor:
		return t.VisitGenericStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NginxParser) GenericStatement() (localctx IGenericStatementContext) {
	this := p
	_ = this

	localctx = NewGenericStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, NginxParserRULE_genericStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(NginxParserValue)
	}
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<NginxParserT__5)|(1<<NginxParserT__6)|(1<<NginxParserT__7)|(1<<NginxParserValue))) != 0 {
		p.SetState(45)
		p.GetErrorHandler().Sync(p)
		switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(43)
				p.Match(NginxParserValue)
			}

		case 2:
			{
				p.SetState(44)
				p.Regexp()
			}

		}

		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IRegexHeaderStatementContext is an interface to support dynamic dispatch.
type IRegexHeaderStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRegexHeaderStatementContext differentiates from other interfaces.
	IsRegexHeaderStatementContext()
}

type RegexHeaderStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRegexHeaderStatementContext() *RegexHeaderStatementContext {
	var p = new(RegexHeaderStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NginxParserRULE_regexHeaderStatement
	return p
}

func (*RegexHeaderStatementContext) IsRegexHeaderStatementContext() {}

func NewRegexHeaderStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RegexHeaderStatementContext {
	var p = new(RegexHeaderStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NginxParserRULE_regexHeaderStatement

	return p
}

func (s *RegexHeaderStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *RegexHeaderStatementContext) REGEXP_PREFIXED() antlr.TerminalNode {
	return s.GetToken(NginxParserREGEXP_PREFIXED, 0)
}

func (s *RegexHeaderStatementContext) Value() antlr.TerminalNode {
	return s.GetToken(NginxParserValue, 0)
}

func (s *RegexHeaderStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RegexHeaderStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RegexHeaderStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NginxVisitor:
		return t.VisitRegexHeaderStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NginxParser) RegexHeaderStatement() (localctx IRegexHeaderStatementContext) {
	this := p
	_ = this

	localctx = NewRegexHeaderStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, NginxParserRULE_regexHeaderStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.Match(NginxParserREGEXP_PREFIXED)
	}
	{
		p.SetState(51)
		p.Match(NginxParserValue)
	}

	return localctx
}

// ILuaBlockContext is an interface to support dynamic dispatch.
type ILuaBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLuaBlockContext differentiates from other interfaces.
	IsLuaBlockContext()
}

type LuaBlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLuaBlockContext() *LuaBlockContext {
	var p = new(LuaBlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NginxParserRULE_luaBlock
	return p
}

func (*LuaBlockContext) IsLuaBlockContext() {}

func NewLuaBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LuaBlockContext {
	var p = new(LuaBlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NginxParserRULE_luaBlock

	return p
}

func (s *LuaBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *LuaBlockContext) LUA_HEADER() antlr.TerminalNode {
	return s.GetToken(NginxParserLUA_HEADER, 0)
}

func (s *LuaBlockContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(NginxParserNEWLINE)
}

func (s *LuaBlockContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(NginxParserNEWLINE, i)
}

func (s *LuaBlockContext) AllLuaStatement() []ILuaStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILuaStatementContext); ok {
			len++
		}
	}

	tst := make([]ILuaStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILuaStatementContext); ok {
			tst[i] = t.(ILuaStatementContext)
			i++
		}
	}

	return tst
}

func (s *LuaBlockContext) LuaStatement(i int) ILuaStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILuaStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILuaStatementContext)
}

func (s *LuaBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LuaBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LuaBlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NginxVisitor:
		return t.VisitLuaBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NginxParser) LuaBlock() (localctx ILuaBlockContext) {
	this := p
	_ = this

	localctx = NewLuaBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, NginxParserRULE_luaBlock)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Match(NginxParserLUA_HEADER)
	}
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == NginxParserNEWLINE {
		{
			p.SetState(54)
			p.Match(NginxParserNEWLINE)
		}

	}
	{
		p.SetState(57)
		p.Match(NginxParserT__1)
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == NginxParserNEWLINE {
		{
			p.SetState(58)
			p.Match(NginxParserNEWLINE)
		}

	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<NginxParserT__0)|(1<<NginxParserT__3)|(1<<NginxParserT__4)|(1<<NginxParserT__5)|(1<<NginxParserValue))) != 0 {
		{
			p.SetState(61)
			p.LuaStatement()
		}

		p.SetState(66)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(67)
		p.Match(NginxParserT__2)
	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 9, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(68)
			p.Match(NginxParserNEWLINE)
		}

	}

	return localctx
}

// ILuaStatementContext is an interface to support dynamic dispatch.
type ILuaStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLuaStatementContext differentiates from other interfaces.
	IsLuaStatementContext()
}

type LuaStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLuaStatementContext() *LuaStatementContext {
	var p = new(LuaStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NginxParserRULE_luaStatement
	return p
}

func (*LuaStatementContext) IsLuaStatementContext() {}

func NewLuaStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LuaStatementContext {
	var p = new(LuaStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NginxParserRULE_luaStatement

	return p
}

func (s *LuaStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *LuaStatementContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(NginxParserNEWLINE, 0)
}

func (s *LuaStatementContext) AllValue() []antlr.TerminalNode {
	return s.GetTokens(NginxParserValue)
}

func (s *LuaStatementContext) Value(i int) antlr.TerminalNode {
	return s.GetToken(NginxParserValue, i)
}

func (s *LuaStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LuaStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LuaStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NginxVisitor:
		return t.VisitLuaStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NginxParser) LuaStatement() (localctx ILuaStatementContext) {
	this := p
	_ = this

	localctx = NewLuaStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, NginxParserRULE_luaStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(80)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case NginxParserT__3, NginxParserT__4, NginxParserT__5, NginxParserValue:
		p.SetState(72)
		p.GetErrorHandler().Sync(p)
		_alt = 1
		for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			switch _alt {
			case 1:
				{
					p.SetState(71)
					_la = p.GetTokenStream().LA(1)

					if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<NginxParserT__3)|(1<<NginxParserT__4)|(1<<NginxParserT__5)|(1<<NginxParserValue))) != 0) {
						p.GetErrorHandler().RecoverInline(p)
					} else {
						p.GetErrorHandler().ReportMatch(p)
						p.Consume()
					}
				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}
